{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "KeyboardLeft",
            "id": "0a5a1989-a98e-4bb0-8c37-e10b2bc86e89",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "bed8cffc-ff0f-4968-915a-e9c960c9cfc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "c1a09a7f-21d1-4abf-923a-fa03ecb2b872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "ed34947f-9e33-41ed-982e-f04accbc0c21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractKill",
                    "type": "Button",
                    "id": "8c6f3110-71be-4fc3-9f8d-e8fb52153099",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ViewTask",
                    "type": "Button",
                    "id": "13e2db7d-9cb2-4c73-b780-a2a3d988fc16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2283ad0a-7280-4072-8935-e7eff1fe1c7f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abddaf06-9990-48d3-81ad-d8f9a2359e6c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9860433-4165-4844-ae10-4d9394e88c20",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ded08dad-dc9e-42b6-9627-840ccc314f66",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "InteractKill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1b25ac3-3985-4d77-bcdc-3693435813aa",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "ViewTask",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardRight",
            "id": "267293a6-c2fd-4da7-b683-31b1ba07e349",
            "actions": [
                {
                    "name": "ViewTask",
                    "type": "Button",
                    "id": "1f6738fe-bcc5-46d7-bb71-f8d5685a2ba3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractKill",
                    "type": "Button",
                    "id": "4acb560e-b7bb-4115-9bb4-12cc3a819e87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "ad794a30-4e1e-4e78-989b-cc8787e7677b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "54838cf7-944f-4ea1-9988-6fa9fad81ef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "7ea96253-61f0-4fc8-97a5-d1262ad8941e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70dde6b7-07b4-4f10-afe3-1584c8e98489",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "P1",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8848c71f-ea1b-41b6-b878-366ba2710f8d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "P1",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c185f94-1e80-443b-b16e-6e4825bbe2ca",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "P1",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b174ee6d-c463-4a58-b4ab-115b8f898b25",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "911ada2e-2f97-449a-b7b5-083bd841f89f",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "P1;P0",
                    "action": "InteractKill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efe784f0-de80-424a-8189-b6807a5e6389",
                    "path": "<Keyboard>/backslash",
                    "interactions": "",
                    "processors": "",
                    "groups": "P1",
                    "action": "ViewTask",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GamePad",
            "id": "9fc08146-8b67-4bd5-987d-cefa523bb1df",
            "actions": [
                {
                    "name": "ViewTask",
                    "type": "Button",
                    "id": "5470c5d2-2952-4118-a1ad-0e118f14d5ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractKill",
                    "type": "Button",
                    "id": "d86e540f-4390-466f-989b-cf6010a1721f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "a5b27a64-172b-47d9-9c83-bff38cc0cd62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "ba676f94-468e-4ada-8c27-cb12b8bf27ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "5d1c9604-ae46-4f54-ade2-5c943420cf43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ace95530-13af-4ae4-a2dd-52a02e64bf64",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "P0;P3",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cf05db6-68dc-4f8f-aa11-ca40dfd16ea2",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "P3;P0",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a716f7a3-1d64-4c6b-b6eb-c67cc424390f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "P3;P0",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8e9c866-0fe0-44ae-ac20-2a1ec47d67aa",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "P3;P0",
                    "action": "InteractKill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e93e838e-29e5-4051-8c7c-3525a5bc0167",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "P3;P0",
                    "action": "ViewTask",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "P0",
            "bindingGroup": "P0",
            "devices": []
        },
        {
            "name": "P1",
            "bindingGroup": "P1",
            "devices": []
        },
        {
            "name": "P2",
            "bindingGroup": "P2",
            "devices": []
        },
        {
            "name": "P3",
            "bindingGroup": "P3",
            "devices": []
        }
    ]
}